--- a/dev/tutorials/global_identifiability/index.html
+++ b/dev/tutorials/global_identifiability/index.html
@@ -25,33 +25,33 @@ v&#39;(t) = k*y(t) - v(t)*u
 w&#39;(t) = -b*w(t) + c*w(t)*x(t)*y(t) - c*w(t)*q*y(t)
 y2(t) = z(t)
 y1(t) = w(t)</code><br/><code class="language-julia-repl hljs" style="display:block;">julia&gt; global_id = assess_identifiability(ode, 0.99)</code><code class="nohighlight hljs ansi" style="display:block;">[ Info: Assessing local identifiability
-[ Info: Local identifiability assessed in 5.939543097 seconds
+[ Info: Local identifiability assessed in 6.376782747 seconds
 [ Info: Assessing global identifiability
 [ Info: Computing IO-equations
-┌ Info: Computed in 9.637223617 seconds
+┌ Info: Computed in 10.167869985 seconds
 │   :ioeq_time = :ioeq_time
-└   ioeq_time = 9.637223617
+└   ioeq_time = 10.167869985
 [ Info: Computing Wronskians
-┌ Info: Computed in 3.120957835 seconds
+┌ Info: Computed in 3.529058323 seconds
 │   :wrnsk_time = :wrnsk_time
-└   wrnsk_time = 3.120957835
+└   wrnsk_time = 3.529058323
 [ Info: Dimensions of the wronskians [40, 18]
-┌ Info: Ranks of the Wronskians computed in 0.028090184 seconds
+┌ Info: Ranks of the Wronskians computed in 0.027505559 seconds
 │   :rank_time = :rank_time
-└   rank_times = 0.028090184
+└   rank_times = 0.027505559
 [ Info: Assessing global identifiability using the coefficients of the io-equations
-┌ Info: Computed in 0.970815164 seconds
+┌ Info: Computed in 1.077497305 seconds
 │   :check_time = :check_time
-└   check_time = 0.970815164
-[ Info: Global identifiability assessed in 14.444031285 seconds
-Dict{Nemo.fmpq_mpoly, Pair{Any, Symbol}} with 10 entries:
-  d    =&gt; a=&gt;:globally
-  k    =&gt; beta=&gt;:nonidentifiable
-  u    =&gt; lm=&gt;:nonidentifiable
-  q    =&gt; b=&gt;:globally
-  a    =&gt; c=&gt;:nonidentifiable
-  beta =&gt; h=&gt;:globally
-  lm   =&gt; q=&gt;:nonidentifiable
-  b    =&gt; d=&gt;:globally
-  c    =&gt; k=&gt;:nonidentifiable
-  h    =&gt; u=&gt;:globally</code></pre><p>We also note that it&#39;s usually inexpensive to obtain the result with higher probability of correctness. For example, taking <code>p=0.9999</code> in the system above will result only in a slight slowdown.</p><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>D. Wodarz, M. Nowak, <a href="https://doi.org/10.1073/pnas.96.25.14464"><em>Specific therapy regimes could lead to long-term immunological control of HIV</em></a>, PNAS December 7, 1999 96 (25) 14464-14469;</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../local_identifiability/">« Local Identifiability of Differential Models</a><a class="docs-footer-nextpage" href="../using_modeling_toolkit/">Using <code>ModelingToolkit.jl</code> With <code>StructuralIdentifiability.jl</code> »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.12 on <span class="colophon-date" title="Thursday 3 February 2022 09:03">Thursday 3 February 2022</span>. Using Julia version 1.7.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+└   check_time = 1.077497305
+[ Info: Global identifiability assessed in 15.391218266 seconds
+Dict{Any, Symbol} with 10 entries:
+  d    =&gt; :globally
+  k    =&gt; :nonidentifiable
+  u    =&gt; :globally
+  q    =&gt; :nonidentifiable
+  a    =&gt; :globally
+  beta =&gt; :nonidentifiable
+  lm   =&gt; :nonidentifiable
+  b    =&gt; :globally
+  c    =&gt; :nonidentifiable
+  h    =&gt; :globally</code></pre><p>We also note that it&#39;s usually inexpensive to obtain the result with higher probability of correctness. For example, taking <code>p=0.9999</code> in the system above will result only in a slight slowdown.</p><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>D. Wodarz, M. Nowak, <a href="https://doi.org/10.1073/pnas.96.25.14464"><em>Specific therapy regimes could lead to long-term immunological control of HIV</em></a>, PNAS December 7, 1999 96 (25) 14464-14469;</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../local_identifiability/">« Local Identifiability of Differential Models</a><a class="docs-footer-nextpage" href="../using_modeling_toolkit/">Using <code>ModelingToolkit.jl</code> With <code>StructuralIdentifiability.jl</code> »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.12 on <span class="colophon-date" title="Monday 21 February 2022 18:43">Monday 21 February 2022</span>. Using Julia version 1.7.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
